--- a/app/globals.css
+++ b/app/globals.css
@@ -4,13 +4,12 @@
 }
 
 html {
-  color-scheme: light; /* ✅ Forces light mode */
+  color-scheme: light;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+html, body {
+  height: 90%;
 }
 
 body {
